{
    "name": "TouchControl",
    "maps": [
        {
            "name": "Touch",
            "id": "93d74120-fe5d-4860-9b42-4e8675c87fd0",
            "actions": [
                {
                    "name": "PrimaryTouch",
                    "type": "Value",
                    "id": "55649ddc-2609-4a37-8f03-e57fd59d1a70",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "TouchPress",
                    "type": "Button",
                    "id": "6d4e2fe9-0b27-4ffa-a256-679e62463ee3",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "e3f2a434-1088-443a-a373-8b73eeeae5d7",
                    "path": "<Touchscreen>/primaryTouch/position",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "PrimaryTouch",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "645f70ad-0480-4da4-be21-d702417f06bd",
                    "path": "<Touchscreen>/Press",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "TouchPress",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}